2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: csc doesn't like iso-2.

2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Make sure the solution builds on
	  MS.NET 2.0.

2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Flush.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupTool.cs: Allow specifying multiple
	  levels of verbosity.

2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: Bump Mono.Addins version.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/PcFileCache.cs: Updated from MD.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/PcFileCache.cs:
	* Mono.Addins.Setup/SetupService.cs: Make it buildable in .net
	  2.0.

2009-08-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupService.cs: Applications can now
	  register a test command to be used for testing add-ins.
	  Don't use the pkg-config command, use instead the
	  PcFileCache.

	* Mono.Addins.Setup/PcFileCache.cs: Updated.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.Setup.csproj:
	* Mono.Addins.Setup/SetupTool.cs:
	* Mono.Addins.Setup/PcFileCache.cs:
	* Mono.Addins.Setup/SetupService.cs: Added a new project which
	  Implements an msbuild task for resolving add-in references.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Update target framework to 2.0.

2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupService.cs: Added method for getting
	  a registry from a package name.

	* Mono.Addins.Setup/SetupTool.cs: Added some more help for the
	  info command.

2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.Setup.csproj: Remove unnecessary Mono.Posix
	  reference.

2009-05-28  Lluis Sanchez Gual  <lluis@novell.com>
